# kubewhy

./: .gitignore  .goreleaser.yaml  LICENSE  README.md  go.mod  go.sum  install.sh  pyproject.toml
.github/workflows/: build.yml  release.yml
cmd/kubewhy/: main.go
deploy/: demo-broken-app.yaml  readonly-clusterrole.yaml
internal/agent/: agent.go  render.go
internal/dashboard/: dashboard.go
internal/tools/: tools.go
internal/watcher/: watcher.go
src/kubewhy/: agent.py  cli.py  tools.py
