[project]
name = "kubewhy"
version = "0.1.0"
description = "A read-only, natural-language Kubernetes investigator that explains its reasoning as it works."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "kubernetes>=29.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
kubewhy = "kubewhy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kubewhy"]
